resource files/kubernetes/pod-kubectl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubectl-pod
  namespace: default
spec:
  containers:
  - name: kubectl-container
    image: bitnami/kubectl
    command: ["sleep"]
    args: ["3600"]  # Keeps the container running for 1 hour
  serviceAccountName: my-service-account
  restartPolicy: Always
