resource files/kubernetes/pod-test-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-ns
  namespace: test-namespace
spec:
  containers:
  - name: nginx-container
    image: nginx
    ports:
    - containerPort: 80
