resource files/kubernetes/pod-with-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-pod
  namespace: kubernetes-network
spec:
  containers:
  - name: curl-container
    image: appropriate/curl
    command: ["sleep"]
    args: ["3600"]  # Keeps the pod running for an hour
